--- a/BaeGitTest/src/main/webapp/WEB-INF/web.xml
+++ b/BaeGitTest/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,12 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
+	
+	<!-- locaclhost:8080 접속시 제일 처음 시작되는 URL -->
+    <welcome-file-list>
+        <welcome-file>/sample.do</welcome-file>
+    </welcome-file-list>
+    
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -27,7 +32,21 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath*:com/sp/config/db/context-*.xml</param-value>
+	</context-param>
+	
+	 <!--log4j init -->
+	<context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>classpath:com/sp/config/log/log4j.xml</param-value>
+    </context-param>
+    <listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
 </web-app>
