--- a/BaeGitTest/src/main/webapp/WEB-INF/web.xml
+++ b/BaeGitTest/src/main/webapp/WEB-INF/web.xml
@@ -5,19 +5,20 @@
 	
 	<!-- locaclhost:8080 접속시 제일 처음 시작되는 URL -->
     <welcome-file-list>
-        <welcome-file>/sample.do</welcome-file>
+        <welcome-file>/home.jsp</welcome-file>
     </welcome-file-list>
-    
+
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>classpath:/spring/spring-*.xml</param-value>
 	</context-param>
-	
+
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
 
 	<!-- Processes application requests -->
 	<servlet>
@@ -25,28 +26,21 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>classpath:/spring/spring-*.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-		
+
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:com/sp/config/db/context-*.xml</param-value>
-	</context-param>
-	
-	 <!--log4j init -->
+
+	 <!--log4j init
 	<context-param>
         <param-name>log4jConfigLocation</param-name>
         <param-value>classpath:com/sp/config/log/log4j.xml</param-value>
     </context-param>
-    <listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	-->
 
 </web-app>
