--- a/BaeGitTest/pom.xml
+++ b/BaeGitTest/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <org.springframework-version>5.0.0.RELEASE</org.springframework-version>
-        <org.aspectj-version>1.6.10</org.aspectj-version>
+        <org.aspectj-version>1.7.3</org.aspectj-version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
     </properties>
 
@@ -20,6 +20,7 @@
             <url>https://code.lds.org/nexus/content/groups/main-repo</url>
         </repository>
     </repositories>
+
 
 
     <dependencies>
@@ -41,12 +42,24 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-
-        <!-- AspectJ -->
         <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${org.aspectj-version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Logging -->
