--- a/BaeGitTest/pom.xml
+++ b/BaeGitTest/pom.xml
@@ -195,6 +195,27 @@
             <version>11.2.0.3</version>
         </dependency>
 
+		<!-- tiles setting -->
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-extras</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-servlet</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+		<!-- end tiles setting -->
+
+
     </dependencies>
     <build>
         <plugins>
