--- a/MyggumiAdmin/pom.xml
+++ b/MyggumiAdmin/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sp</groupId>
-    <artifactId>te</artifactId>
-    <name>BaeGitTest</name>
+    <artifactId>Myggumi</artifactId>
+    <name>MyggumiAdmin</name>
     <packaging>war</packaging>
     <version>1.0.0-BUILD-SNAPSHOT</version>
 
@@ -21,8 +21,6 @@
             <url>https://code.lds.org/nexus/content/groups/main-repo</url>
         </repository>
     </repositories>
-
-
 
     <dependencies>
         <!-- Spring -->
