--- a/MyggumiAdmin/pom.xml
+++ b/MyggumiAdmin/pom.xml
@@ -193,26 +193,41 @@
             <version>11.2.0.3</version>
         </dependency>
 
-		<!-- tiles setting -->
+        <!-- tiles setting -->
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-extras</artifactId>
             <version>3.0.5</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-servlet</artifactId>
             <version>3.0.5</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-jsp</artifactId>
             <version>3.0.5</version>
         </dependency>
-		<!-- end tiles setting -->
+        <!-- end tiles setting -->
 
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- 테스트용 추가 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>3.1.1.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <build>
