test -> product 변경

--- a/MyggumiAdmin/pom.xml
+++ b/MyggumiAdmin/pom.xml
@@ -221,6 +221,21 @@
             <scope>test</scope>
         </dependency>
 
+		<!-- Validation 추가 -->
+	    <dependency>
+	        <groupId>javax.validation</groupId> 
+	        <artifactId>validation-api</artifactId> 
+	        <version>1.0.0.GA</version> 
+	    </dependency>
+	    
+	    <dependency>  
+	        <groupId>org.hibernate</groupId>  
+	        <artifactId>hibernate-validator</artifactId>  
+	        <version>4.2.0.Final</version>
+	    </dependency>
+	    <!-- 끝 Validation 추가 -->
+
+
     </dependencies>
     <build>
         <plugins>
