--- a/MyggumiAdmin/src/main/webapp/WEB-INF/web.xml
+++ b/MyggumiAdmin/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,21 @@
     <welcome-file>/home.jsp</welcome-file>
   </welcome-file-list>
   
+  <filter>
+   <filter-name>encodingFilter</filter-name>
+   <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+   <init-param>
+    <param-name>encoding</param-name>
+    <param-value>utf-8</param-value>
+   </init-param>   
+  </filter>
+  
+  <filter-mapping>
+   <filter-name>encodingFilter</filter-name>
+   <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:/spring/spring-*.xml</param-value>
