--- a/MyggumiAdmin/pom.xml
+++ b/MyggumiAdmin/pom.xml
@@ -51,7 +51,17 @@
             <artifactId>spring-aspects</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-
+		<!-- 엑셀 출력을 위한 라이브러리 -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+		<groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.16</version>
+		</dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
